# syn_chemist

./: .gitignore  CLAUDE.md  LICENSE  PRD.md  README-CN.md  README.md
.github/workflows/: ci.yml
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  cache.py  config.py  db.py  i18n.py  main.py
backend/app/api/: _image_utils.py  conditions.py  fga.py  molecule.py  molecule_image.py  retro.py
backend/app/llm/: __init__.py  _retry.py  anthropic_provider.py  base.py  deepseek.py  gemini_provider.py  gemini_vision.py  openai_provider.py
backend/app/modules/: conditions.py  fga.py  retro.py
backend/app/pipeline/: confidence.py  naming.py  verify.py
backend/app/pipeline/prompts/: __init__.py  conditions.j2  fga.j2  retro.j2  system.j2  vision_conditions.j2  vision_fga.j2  vision_retro.j2
backend/tests/: conftest.py
backend/tests/golden/: test_golden_molecules.py
backend/tests/integration/: test_api.py  test_modules.py
backend/tests/unit/: test_api_molecule_image.py  test_cache.py  test_confidence.py  test_gemini_vision_ocr.py  test_judge_base.py  test_lang_propagation.py  test_naming.py  test_prompts.py  test_retry.py  test_verify.py
docs/: roadmap.md  test_cases.md
docs/specs/: P1-retry.md  P2-image-input.md  P3-i18n.md  P4-deployment.md  README.md  security-secrets.md
frontend/: .gitignore  next.config.mjs  package-lock.json  package.json  playwright.config.ts  smiles-drawer.d.ts  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ConfidenceBadge.tsx  ImageInput.tsx  LangToggle.tsx  Tabs.tsx  (+6 more)
(+10 files in other folders)
