[project]
name = "ai-chemist-backend"
version = "0.1.0"
description = "AI_chemist backend — generate/judge/verify pipeline for synthetic chemistry"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "sqlmodel>=0.0.22",
    "httpx>=0.27",
    "jinja2>=3.1",
    "rdkit>=2024.3.5",
    "py2opsin>=1.2.0",
    "openai>=1.40",          # used for DeepSeek (OpenAI-compatible) and OpenAI itself
    "anthropic>=0.40",
    "google-generativeai>=0.7",
    "tenacity>=9.0",
]

[project.optional-dependencies]
stout = ["STOUT-pypi>=2.0.5"]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.6",
    "mypy>=1.11",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: tests that hit real STOUT/OPSIN/LLM (skipped by default in CI PR runs)",
]
asyncio_mode = "auto"
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
